force-app/main/default/objects/CareProgramEnrollee/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Enrollees</relationshipLabel>
    <relationshipName>Enrollees</relationshipName>
</CustomField>