force-app/main/default/objects/CareProgramEnrollee/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName><label>Eligibility Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>Eligible</fullName><default>false</default><label>Eligible</label></value>
        <value><fullName>Ineligible</fullName><default>false</default><label>Ineligible</label></value>
        <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
    </valueSetDefinition></valueSet>
</CustomField>