force-app/main/default/objects/CareProgramEnrollee/fields/eSignature_Status__c.field-meta.xml
<CustomField>
    <fullName>eSignature_Status__c</fullName><label>eSignature Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Not Sent</fullName><default>true</default><label>Not Sent</label></value>
        <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
        <value><fullName>Signed</fullName><default>false</default><label>Signed</label></value>
        <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
    </valueSetDefinition></valueSet>
</CustomField>