force-app/main/default/objects/CareProgramEnrollee/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName><label>Insurance Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
        <value><fullName>Medicare</fullName><default>false</default><label>Medicare</label></value>
        <value><fullName>Medicaid</fullName><default>false</default><label>Medicaid</label></value>
        <value><fullName>Uninsured</fullName><default>false</default><label>Uninsured</label></value>
        <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
    </valueSetDefinition></valueSet>
</CustomField>