force-app/main/default/objects/CareProgramEnrollee/fields/Prescriber_NPI__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_NPI__c</fullName><label>Prescriber NPI</label>
    <type>Text</type><length>20</length>
</CustomField>